objects/smagicinteract__List_View_Execution__c.object
<CustomObject>
    <description>Batch information of list view will be stored .</description>
    <fields>
        <fullName>smagicinteract__BatchJobId__c</fullName>
        <label>BatchJobId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Expexted_SMS__c</fullName>
        <label>Expexted SMS</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__List_View_Configuration__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>List view Config Id for which batch is operating</description>
        <label>List View Configuration</label>
        <referenceTo>smagicinteract__List_View_Configuration__c</referenceTo>
        <relationshipLabel>List View Executions</relationshipLabel>
        <relationshipName>List_View_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Messages_Delivered__c</fullName>
        <label>Messages Delivered</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Messages_Processed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Messages Processed</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Opt_Out_Records__c</fullName>
        <label>Opt Out Records</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Optout_Field__c</fullName>
        <label>Optout Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Phone_Fields__c</fullName>
        <label>Phone Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMS_Text__c</fullName>
        <label>SMS Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Template_Name__c</fullName>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Time_Taken__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Time Taken</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Total_Records__c</fullName>
        <label>Total Records</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__status__c</fullName>
        <label>status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>List View Execution</label>
    <listViews>
        <fullName>Nolan_Daigle_List_View_Execution</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>smagicinteract__All</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__List_View_Configuration__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>smagicinteract__Time_Taken__c</columns>
        <columns>smagicinteract__BatchJobId__c</columns>
        <columns>smagicinteract__Expexted_SMS__c</columns>
        <columns>smagicinteract__Messages_Delivered__c</columns>
        <columns>smagicinteract__Messages_Processed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>List View Execution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List View Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>